add first version insert/ need enable_if

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,12 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "filesystem": "cpp",
+        "set": "cpp",
+        "csignal": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "__memory": "cpp"
     }
 }
