range insert problem

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "csignal": "cpp",
         "fstream": "cpp",
         "iomanip": "cpp",
-        "__memory": "cpp"
+        "__memory": "cpp",
+        "*.ipp": "cpp"
     }
 }
