--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,8 @@
         "iomanip": "cpp",
         "__memory": "cpp",
         "*.ipp": "cpp",
-        "__functional_base_03": "cpp"
+        "__functional_base_03": "cpp",
+        "__functional_03": "cpp"
     },
     "C_Cpp.dimInactiveRegions": false
 }
